; ModuleID = '/home/carl/AnghaBench/git/extr_wt-status.c_wt_longstatus_print_other_header.c'
source_filename = "/home/carl/AnghaBench/git/extr_wt-status.c_wt_longstatus_print_other_header.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wt_status = type { i32 }

@WT_STATUS_HEADER = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"%s:\00", align 1
@.str.1 = private unnamed_addr constant [64 x i8] c"  (use \22git %s <file>...\22 to include in what will be committed)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wt_status*, i8*, i8*)* @wt_longstatus_print_other_header to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wt_longstatus_print_other_header(%struct.wt_status* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.wt_status*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store %struct.wt_status* %0, %struct.wt_status** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @WT_STATUS_HEADER, align 4
  %9 = load %struct.wt_status*, %struct.wt_status** %4, align 8
  %10 = call i8* @color(i32 %8, %struct.wt_status* %9)
  store i8* %10, i8** %7, align 8
  %11 = load %struct.wt_status*, %struct.wt_status** %4, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @status_printf_ln(%struct.wt_status* %11, i8* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %13)
  %15 = load %struct.wt_status*, %struct.wt_status** %4, align 8
  %16 = getelementptr inbounds %struct.wt_status, %struct.wt_status* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %20, label %19

19:                                               ; preds = %3
  br label %26

20:                                               ; preds = %3
  %21 = load %struct.wt_status*, %struct.wt_status** %4, align 8
  %22 = load i8*, i8** %7, align 8
  %23 = call i8* @_(i8* getelementptr inbounds ([64 x i8], [64 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i8*, i8** %6, align 8
  %25 = call i32 @status_printf_ln(%struct.wt_status* %21, i8* %22, i8* %23, i8* %24)
  br label %26

26:                                               ; preds = %20, %19
  ret void
}

declare dso_local i8* @color(i32, %struct.wt_status*) #1

declare dso_local i32 @status_printf_ln(%struct.wt_status*, i8*, i8*, i8*) #1

declare dso_local i8* @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
